--- a/StoryBookiOS/Base.lproj/Main.storyboard
+++ b/StoryBookiOS/Base.lproj/Main.storyboard
@@ -109,6 +109,21 @@
             </objects>
             <point key="canvasLocation" x="1741" y="-298"/>
         </scene>
+        <!--Home View Controller-->
+        <scene sceneID="A2J-X3-kZA">
+            <objects>
+                <viewController id="KZZ-3q-s1o" customClass="HomeViewController" customModule="StoryBookiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9gn-Jn-Nvs">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="teB-6s-E9q"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Qs-NV-yf1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2522" y="-15"/>
+        </scene>
         <!--Sign Up Controller-->
         <scene sceneID="9Dl-Eg-SGd">
             <objects>
